--- a/App.Infrastructure/App.Infrastructure.csproj
+++ b/App.Infrastructure/App.Infrastructure.csproj
@@ -27,4 +27,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="5.6.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Modules\Authorization\" />
+  </ItemGroup>
+
 </Project>
