Feature: Static content

--- a/App.API/appsettings.json
+++ b/App.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=mssql\\(localdb);Database=App;Trusted Connection=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=Blogging;Trusted_Connection=True;"
   },
   "Logging": {
     "LogLevel": {
@@ -21,10 +21,10 @@
     "RefreshExpireMinute": 7200
   },
   "SMTPSettings": {
-    "Server": "",
-    "Port": "",
-    "SenderName": "",
-    "SenderEmail": "",
+    "Server": "127.0.0.1",
+    "Port": "587",
+    "SenderName": "David",
+    "SenderEmail": "david@domain.com",
     "Account": "",
     "Password": "",
     "Security": true
