--- a/App.API/appsettings.json
+++ b/App.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=Blogging;Trusted_Connection=True;"
+    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=app;Trusted_Connection=True;"
   },
   "Logging": {
     "LogLevel": {
