--- a/App.API/appsettings.json
+++ b/App.API/appsettings.json
@@ -21,12 +21,12 @@
     "RefreshExpireMinute": 7200
   },
   "SMTPSettings": {
-    "Server": "127.0.0.1",
+    "Server": "smtp.sendgrid.net",
     "Port": "587",
-    "SenderName": "David",
-    "SenderEmail": "david@domain.com",
-    "Account": "",
-    "Password": "",
+    "SenderName": "itechnics",
+    "SenderEmail": "no-reply@em1422.leavingstone.club",
+    "Account": "kobala@leavingstone.com",
+    "Password": "lssendgrid,055",
     "Security": true
   }
 }
