--- a/App.API/appsettings.json
+++ b/App.API/appsettings.json
@@ -21,12 +21,12 @@
     "RefreshExpireMinute": 7200
   },
   "SMTPSettings": {
-    "Server": "smtp.sendgrid.net",
+    "Server": "",
     "Port": "587",
-    "SenderName": "itechnics",
-    "SenderEmail": "no-reply@em1422.leavingstone.club",
-    "Account": "kobala@leavingstone.com",
-    "Password": "lssendgrid,055",
+    "SenderName": "",
+    "SenderEmail": "",
+    "Account": "",
+    "Password": "",
     "Security": true
   }
 }
