Chore: gitignore config

--- a/.gitignore
+++ b/.gitignore
@@ -31,9 +31,9 @@ bld/
 App.API/wwwroot/uploads
 
 #Ignore local development settings
-App.API/appsettings.Development.json
+App.API/appsettings.json
 
-appsettings.Development.json
+appsettings.json
 
 #Ignore log files
 App.API/Logs/
