--- a/App.API/appsettings.Development.json
+++ b/App.API/appsettings.Development.json
@@ -21,12 +21,12 @@
     "RefreshExpireMinute": 7200
   },
   "SMTPSettings": {
-    "Server": "",
-    "Port": "587",
-    "SenderName": "",
-    "SenderEmail": "",
+    "Server": "127.0.0.1",
+    "Port": 25,
+    "SenderName": "David",
+    "SenderEmail": "no-replay@domain.com",
     "Account": "",
     "Password": "",
-    "Security": true
+    "Security": false
   }
 }
